Git Tests/force-app/main/default/default/objects/TitulosAbertos__c/TitulosAbertos__c.object-meta.xml
<CustomObject>
    <label>Título em aberto</label>
    <nameField>
        <displayFormat>TIT-{0000000}</displayFormat>
        <label>Número do título em aberto</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Títulos em aberto</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>