Git Tests/force-app/main/default/default/objects/TitulosAbertos__c/fields/Conta__c.field-meta.xml
<CustomField>
    <fullName>Conta__c</fullName>
    <label>Nome do cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Títulos em aberto</relationshipLabel>
    <relationshipName>TitulosEmAberto</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>