Git Tests/force-app/main/default/default/objects/TitulosAbertos__c/fields/ContaBanco__c.field-meta.xml
<CustomField>
    <fullName>ContaBanco__c</fullName>
    <label>Conta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>