Git Tests/force-app/main/default/default/objects/TitulosAbertos__c/fields/DataVencimento__c.field-meta.xml
<CustomField>
    <fullName>DataVencimento__c</fullName>
    <label>Data de vencimento</label>
    <type>Date</type>
</CustomField>