Git Tests/force-app/main/default/default/objects/TitulosAbertos__c/fields/EmpresaFilial__c.field-meta.xml
<CustomField>
    <fullName>EmpresaFilial__c</fullName>
    <label>Empresa/Filial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>