Git Tests/force-app/main/default/default/objects/TitulosAbertos__c/fields/LinhaDigitavel__c.field-meta.xml
<CustomField>
    <fullName>LinhaDigitavel__c</fullName>
    <label>Linha digitável</label>
    <length>255</length>
    <type>Text</type>
</CustomField>