Git Tests/force-app/main/default/default/objects/TitulosAbertos__c/fields/Multa__c.field-meta.xml
<CustomField>
    <fullName>Multa__c</fullName>
    <label>Multa</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>