Git Tests/force-app/main/default/default/objects/TitulosAbertos__c/fields/NomeBanco__c.field-meta.xml
<CustomField>
    <fullName>NomeBanco__c</fullName>
    <label>Nome do banco</label>
    <length>255</length>
    <type>Text</type>
</CustomField>