Git Tests/force-app/main/default/default/objects/TitulosAbertos__c/fields/NumeroBoleto__c.field-meta.xml
<CustomField>
    <fullName>NumeroBoleto__c</fullName>
    <externalId>true</externalId>
    <label>Número do boleto</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>