Git Tests/force-app/main/default/default/objects/TitulosAbertos__c/fields/NumeroNotaFiscal__c.field-meta.xml
<CustomField>
    <fullName>NumeroNotaFiscal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Número da nota fiscal</label>
    <referenceTo>NotasFiscais__c</referenceTo>
    <relationshipLabel>Títulos em aberto</relationshipLabel>
    <relationshipName>TitulosAberto</relationshipName>
    <type>Lookup</type>
</CustomField>