Git Tests/force-app/main/default/default/objects/TitulosAbertos__c/fields/Observacoes__c.field-meta.xml
<CustomField>
    <fullName>Observacoes__c</fullName>
    <label>Observações</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>