Git Tests/force-app/main/default/default/objects/TitulosAbertos__c/fields/ParcelaBoleto__c.field-meta.xml
<CustomField>
    <fullName>ParcelaBoleto__c</fullName>
    <label>Parcela do boleto</label>
    <length>3</length>
    <type>Text</type>
</CustomField>