Git Tests/force-app/main/default/default/objects/TitulosAbertos__c/fields/ValorDocumento__c.field-meta.xml
<CustomField>
    <fullName>ValorDocumento__c</fullName>
    <label>Valor do documento</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>