Git Tests/force-app/main/default/default/objects/TitulosAbertos__c/validationRules/Titulo_BloquearEdicaoNomeCliente.validationRule-meta.xml
<ValidationRule>
    <fullName>Titulo_BloquearEdicaoNomeCliente</fullName>
    <active>true</active>
    <description>Bloquear a edição do campo &quot;Nome do cliente&quot; no título em aberto.</description>
    <errorConditionFormula>AND(
$Profile.Name != &apos;Administrador do sistema&apos;,
ISCHANGED( Conta__c )
)</errorConditionFormula>
    <errorDisplayField>Conta__c</errorDisplayField>
    <errorMessage>O campo &quot;Nome do cliente&quot; não pode ser editado.</errorMessage>
</ValidationRule>